[workspace]
members = ["."]

[package]
name = "snled27351_driver"
version = "0.1.0"
description = "Async embedded-hal driver for the SNLED27351 matrix LED driver IC, supporting SPI and I2C transports"
repository = "https://github.com/fuchskurt/snled27351_driver"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
i2c = []
spi = []

[dependencies]
embedded-hal = "1"
embedded-hal-async = "1"
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 1 }
restriction = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 1 }

[lints]
workspace = true

[lib]
name = "snled27351_driver"
crate-type = ["dylib"]
test = false
bench = false

[profile.release]
lto = "fat"
codegen-units = 1